FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(WAYLANDCLIENT REQUIRED wayland-client)
INCLUDE_DIRECTORIES(${WAYLANDCLIENT_INCLUDE_DIRS})
LINK_DIRECTORIES(${WAYLANDCLIENT_LIBRARY_DIRS})

PKG_CHECK_MODULES(GST REQUIRED gstreamer-1.0)
INCLUDE_DIRECTORIES(${GST_INCLUDE_DIRS})
LINK_DIRECTORIES(${GST_LIBRARY_DIRS})

PKG_CHECK_MODULES(GSTVIDEO REQUIRED gstreamer-video-1.0)
INCLUDE_DIRECTORIES(${GSTVIDEO_INCLUDE_DIRS})
LINK_DIRECTORIES(${GSTVIDEO_LIBRARY_DIRS})

PKG_CHECK_MODULES(GSTPLUGINBASE REQUIRED gstreamer-plugins-base-1.0)
INCLUDE_DIRECTORIES(${GSTPLUGINBASE_INCLUDE_DIRS})
LINK_DIRECTORIES(${GSTPLUGINBASE_LIBRARY_DIRS})

include_directories(
	${CMAKE_SOURCE_DIR}/common
	)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNEMO_LOG_ON -DNEMO_DEBUG_ON")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

add_definitions(-DGST_PACKAGE_NAME="GStreamer NEMO Plug-ins git")
add_definitions(-DGST_PACKAGE_ORIGIN="Unknown package origin")
add_definitions(-DGST_PACKAGE_RELEASE_DATETIME="2014-05-22T08:00Z")

add_definitions(-DPACKAGE="gst-plugins-nemo")
add_definitions(-DPACKAGE_NAME="GStreamer NEMO Plug-ins")
add_definitions(-DPACKAGE_STRING="GStreamer NEMO Plug-ins 1.1.1.1")
add_definitions(-DPACKAGE_TARNAME="gst-plugins-nemo")
add_definitions(-DPACKAGE_URL="")
add_definitions(-DPACKAGE_VERSION="1.1.1.1")

add_definitions(-DVERSION="1.1.1.1")

add_library(gstnemosink
	gstnemobufferpool.c
	gstnemosink.c
	gstnemosubsink.c
	${PROTOCOLS}
	)

TARGET_LINK_LIBRARIES(gstnemosink
	${WAYLANDCLIENT_LIBRARIES}
	${GST_LIBRARIES}
	${GSTVIDEO_LIBRARIES}
	${GSTPLUGINBASE_LIBRARIES}
	)

INSTALL(TARGETS gstnemosink DESTINATION lib${CMAKE_LIBRARY_SUFFIX}/gstreamer-1.0)
