FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(PIXMAN REQUIRED pixman-1)
INCLUDE_DIRECTORIES(${PIXMAN_INCLUDE_DIRS})
LINK_DIRECTORIES(${PIXMAN_LIBRARY_DIRS})

PKG_CHECK_MODULES(FREETYPE REQUIRED freetype2)
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
LINK_DIRECTORIES(${FREETYPE_LIBRARY_DIRS})

PKG_CHECK_MODULES(HARFBUZZ REQUIRED harfbuzz)
INCLUDE_DIRECTORIES(${HARFBUZZ_INCLUDE_DIRS})
LINK_DIRECTORIES(${HARFBUZZ_LIBRARY_DIRS})

include_directories(
	${CMAKE_SOURCE_DIR}/asst
	${CMAKE_SOURCE_DIR}/helper
	)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -std=c++11")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

add_library(nemonavi SHARED
	nemonavi.cpp
	naviapp.cpp
	naviclient.cpp
	navikey.c
	)

TARGET_LINK_LIBRARIES(nemonavi
	nemoasst
	cef
	cef_dll_wrapper
	)

INSTALL(TARGETS nemonavi DESTINATION lib${CMAKE_LIBRARY_SUFFIX})

set(HEADER_FILES
	${CMAKE_SOURCE_DIR}/navi/nemonavi.h
	)

set(NEMONAVI_PKGCONFIG_REQUIRES "nemoasst nemohelper")

configure_file(
	nemonavi.pc.in
	nemonavi.pc
	@ONLY
	)

INSTALL(FILES ${HEADER_FILES} DESTINATION include/nemonavi)
INSTALL(FILES ${CMAKE_BINARY_DIR}/navi/nemonavi.pc DESTINATION lib${CMAKE_LIBRARY_SUFFIX}/pkgconfig)
