FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(LIBAVCODEC REQUIRED libavcodec)
INCLUDE_DIRECTORIES(${LIBAVCODEC_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVCODEC_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBAVFORMAT REQUIRED libavformat)
INCLUDE_DIRECTORIES(${LIBAVFORMAT_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVFORMAT_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBAVUTIL REQUIRED libavutil)
INCLUDE_DIRECTORIES(${LIBAVUTIL_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVUTIL_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBSWSCALE REQUIRED libswscale)
INCLUDE_DIRECTORIES(${LIBSWSCALE_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBSWSCALE_LIBRARY_DIRS})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

include_directories(
	${CMAKE_SOURCE_DIR}/misc
	${CMAKE_SOURCE_DIR}/asst
	)

add_library(nemoplay SHARED
	nemoplay.c
	playqueue.c
	)

TARGET_LINK_LIBRARIES(nemoplay
	nemoasst
	pthread
	${LIBAVCODEC_LIBRARIES}
	${LIBAVFORMAT_LIBRARIES}
	${LIBAVUTIL_LIBRARIES}
	${LIBSWSCALE_LIBRARIES}
	)

INSTALL(TARGETS nemoplay DESTINATION lib${CMAKE_LIBRARY_SUFFIX})

set(HEADER_FILES
	${CMAKE_SOURCE_DIR}/play/nemoplay.h
	)

set(NEMOSHOW_PKGCONFIG_REQUIRES "nemoasst libavcodec libavformat libavutil libswscale")

configure_file(
	nemoplay.pc.in
	nemoplay.pc
	@ONLY
	)

INSTALL(FILES ${HEADER_FILES} DESTINATION include/nemoplay)
INSTALL(FILES ${CMAKE_BINARY_DIR}/play/nemoplay.pc DESTINATION lib${CMAKE_LIBRARY_SUFFIX}/pkgconfig)
