FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(PIXMAN REQUIRED pixman-1)
INCLUDE_DIRECTORIES(${PIXMAN_INCLUDE_DIRS})
LINK_DIRECTORIES(${PIXMAN_LIBRARY_DIRS})

PKG_CHECK_MODULES(FREETYPE REQUIRED freetype2)
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
LINK_DIRECTORIES(${FREETYPE_LIBRARY_DIRS})

PKG_CHECK_MODULES(HARFBUZZ REQUIRED harfbuzz)
INCLUDE_DIRECTORIES(${HARFBUZZ_INCLUDE_DIRS})
LINK_DIRECTORIES(${HARFBUZZ_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBAVCODEC REQUIRED libavcodec)
INCLUDE_DIRECTORIES(${LIBAVCODEC_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVCODEC_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBAVFORMAT REQUIRED libavformat)
INCLUDE_DIRECTORIES(${LIBAVFORMAT_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVFORMAT_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBAVUTIL REQUIRED libavutil)
INCLUDE_DIRECTORIES(${LIBAVUTIL_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBAVUTIL_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBSWSCALE REQUIRED libswscale)
INCLUDE_DIRECTORIES(${LIBSWSCALE_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBSWSCALE_LIBRARY_DIRS})

PKG_CHECK_MODULES(AO REQUIRED ao)
INCLUDE_DIRECTORIES(${AO_INCLUDE_DIRS})
LINK_DIRECTORIES(${AO_LIBRARY_DIRS})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

include_directories(
	${CMAKE_SOURCE_DIR}/asst
	${CMAKE_SOURCE_DIR}/helper
	${CMAKE_SOURCE_DIR}/tool
	${CMAKE_BINARY_DIR}/tool
	)

add_library(nemoplay SHARED
	nemoplay.c
	playqueue.c
	playclock.c
	playshader.c
	playback.c
	playbox.c
	playmisc.c
	)

TARGET_LINK_LIBRARIES(nemoplay
	pthread
	${PIXMAN_LIBRARIES}
	${FREETYPE_LIBRARIES}
	${HARFBUZZ_LIBRARIES}
	${LIBAVCODEC_LIBRARIES}
	${LIBAVFORMAT_LIBRARIES}
	${LIBAVUTIL_LIBRARIES}
	${LIBSWSCALE_LIBRARIES}
	${AO_LIBRARIES}
	nemoasst
	nemohelper
	nemotool
	)

INSTALL(TARGETS nemoplay DESTINATION lib${CMAKE_LIBRARY_SUFFIX})

set(HEADER_FILES
	${CMAKE_SOURCE_DIR}/play/nemoplay.h
	${CMAKE_SOURCE_DIR}/play/playqueue.h
	${CMAKE_SOURCE_DIR}/play/playclock.h
	${CMAKE_SOURCE_DIR}/play/playshader.h
	${CMAKE_SOURCE_DIR}/play/playback.h
	${CMAKE_SOURCE_DIR}/play/playbox.h
	${CMAKE_SOURCE_DIR}/play/playmisc.h
	${CMAKE_SOURCE_DIR}/play/ffmpegconfig.h
	)

set(NEMOPLAY_PKGCONFIG_REQUIRES "nemoasst nemohelper nemotool libavcodec libavformat libavutil libswscale ao")

configure_file(
	nemoplay.pc.in
	nemoplay.pc
	@ONLY
	)

INSTALL(FILES ${HEADER_FILES} DESTINATION include/nemoplay)
INSTALL(FILES ${CMAKE_BINARY_DIR}/play/nemoplay.pc DESTINATION lib${CMAKE_LIBRARY_SUFFIX}/pkgconfig)
